--- a/template.yaml
+++ b/template.yaml
@@ -21,6 +21,15 @@ Resources:
       Runtime: nodejs14.x
       Architectures:
         - x86_64
+      Policies:
+        - Version: "2012-10-17"
+          Statement:
+          - Effect: "Allow"
+            Action:
+              - "lambda:InvokeFunction"
+              - "lambda:ListFunctions"
+              - "s3:PutObject"
+            Resource: 'arn:aws:lambda:eu-central-1:654863897714:function:sam-app-VerifyFunction-yS0QOvH6oDXj/*'
       Events:
         CommandReceiver:
           Type: Api
@@ -35,4 +44,12 @@ Resources:
       Runtime: python3.9
       Architectures:
         - x86_64
-
+      Policies:
+        - Version: "2012-10-17"
+          Statement:
+            - Effect: "Allow"
+              Action:
+                - "lambda:InvokeFunction"
+                - "lambda:ListFunctions"
+                - "s3:PutObject"
+              Resource: '*'
