--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           command: |
             pip install virtualenv
             virtualenv .venv
-            . venv/bin/activate
+            source .venv/bin/activate
             pip install -r requirements.txt
             pytest tests
 workflows:
