--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,9 +9,9 @@ jobs:
       - run:
           name: Run tests
           command: |
-            pip install virtualenv
-            virtualenv .venv
-            source .venv/bin/activate
+            python3 -m venv venv
+            . venv/bin/activate
+            pip install -r requirements.txt
             pytest tests
 workflows:
   test_and_deploy:
