--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,13 +6,25 @@ jobs:
     docker:
       - image: python:3.9
     steps:
+      - checkout
+      - restore_cache:
+          key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
       - run:
-          name: Run tests
+          name: Setup VirtualEnv
           command: |
             python3 -m venv venv
             . venv/bin/activate
-            pip install pytest
-            pytest tests
+            pip install -r requirements.txt
+      - save_cache:
+          key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
+          paths:
+            - "venv"
+      - run:
+          name: Running tests
+          command: |
+          . venv/bin/activate
+          pytest
+
 workflows:
   test_and_deploy:
     jobs:
